--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
             <div class="max-w-5xl mx-auto">
 
                 <div class="mb-8 flex justify-center">
-                    <img src="/galeri/Foto1.png" onerror="this.onerror=null; this.src='https://placehold.co/150x150/1e293b/94a3b8?text=Foto%20Profil';" 
+                    <img src="/galeri/Foto1.jpg" onerror="this.onerror=null; this.src='https://placehold.co/150x150/1e293b/94a3b8?text=Foto%20Profil';" 
                          alt="Foto Profil Tawarikh Anggia Cristopher" 
                          class="w-36 h-36 object-cover rounded-full border-4 border-indigo-500 shadow-xl"
                          style="box-shadow: 0 0 25px rgba(99, 102, 241, 0.6);"> 
@@ -482,3 +482,4 @@
 </body>
 
 </html>
+
