--- a/index.html
+++ b/index.html
@@ -249,7 +249,7 @@
                     </div>
                     <div class="p-6">
                         <span class="text-xs font-semibold uppercase text-indigo-300 bg-indigo-900/50 px-2 py-1 rounded">Web App | AI Integration</span>
-                        <h4 class="text-xl font-bold text-white my-2">Web Hunion: Manajemen Hunian dengan AI</h4>
+                        <h4 class="text-xl font-bold text-white my-2">Web Hunion: Manajemen Hunian dengan AI Chat Bot</h4>
                         <p class="text-sm text-gray-500 mb-2">
                             Teknologi: <strong>Node.js</strong>, <strong>EJS</strong>, <strong>MongoDB</strong>, <strong>Gemini API</strong>
                         </p>
@@ -482,4 +482,5 @@
 </body>
 
 </html>
+
 
